# feedback-system

./: .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  progress.txt
admin-panel/: package-lock.json  package.json  vite.config.ts
admin-panel/src/: App.tsx
admin-panel/src/__tests__/: App.test.tsx  Login.test.tsx  authService.test.ts  authStore.test.ts
admin-panel/src/api/: client.ts
admin-panel/src/components/: Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx
admin-panel/src/hooks/: useAuth.ts
backend/: .env.example  Cargo.toml
backend/migrations/: 20260302000000_initial_setup.sql  20260302000001_create_developers_table.sql  20260302000002_create_projects_table.sql  20260302000003_create_end_users_and_conversations.sql  20260302000004_create_messages_table.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  ws.rs
backend/src/api/: admin.rs  auth.rs  middleware.rs  mod.rs  project.rs  sdk.rs
backend/src/model/: conversation.rs  developer.rs  end_user.rs  message.rs  mod.rs  project.rs
backend/src/service/: admin.rs  auth.rs  chat.rs  mod.rs  presence.rs  project.rs  sdk.rs
backend/src/utils/: api_key.rs  jwt.rs  mod.rs  password.rs
docs/: FeedbackHub-Technical-Doc-V1.0.md  FeedbackHub-Technical-Doc.md  TDD-Development-Guideline.md  architecture.md  development-guidelines.md
plans/: feedbackhub-tasks.md  tdd-development-plan.md
sdks/web/: .env.example  package-lock.json  package.json  tsconfig.json  tsup.config.ts
test-page/: .env.example  index.html  package-lock.json  package.json  vitest.config.ts
test-page/src/: App.tsx
(+21 files in other folders)
